--- a/Wiki/中文/技能/說明.md
+++ b/Wiki/中文/技能/說明.md
@@ -48,34 +48,84 @@
 
 ### 天賦
 + 增加卡路里含量
+你的身體已經學會了更好地消化食物，從中提取更多的能量。 多虧了這一點，你吃的每份食物都會給你帶來更多的卡路裏，這可以幫助你更快地恢複並節省更長時間的能量。
+
 + 增加水分
+你的身體已經優化了吸水過程，讓你從每份液體中提取更多的好處。 因此，你喝的每一滴都能顯著改善你的狀況，保持你的水合水平在一個更高的水平。
+
 + 節能
-+ 節水
+你的身體已經學會了在休息時有效地消耗能量，當你不積極運動時，這會顯著降低整體能源成本。 多虧了這一點，你在休息時花費更少的卡路裏，這有助于你保持強壯更長時間，需要更少的食物。
+
++ 節約用水
+你的身體已經適應了休息時水的最低消耗，這可以讓你在不活動的時候不喝更長的時間。 因此，水化水平下降得更慢，這有助于你節約水資源，減少口渴。
+
 + 能量控制
+你的身體在跑步時變得更有效地管理能量，這可以讓你在每次運動上花費更少的能量。 多虧了這一點，你在短跑時失去更少的卡路裏，這有助于你保持更長時間的耐力並避免快速疲勞。
+
 + 水分控制
+你的身體已經學會了有效地管理它的水分平衡，即使是劇烈的體力消耗。 由于這個原因，你在沖刺時失去較少的水分，這可以讓你保持更長時間的水分並降低脫水的風險。
+
 + 能量儲存
+您的身體在步行和慢跑時都優化了能量消耗。 由于這一點，無論強度如何，您在每次運動中花費的卡路裏都更少。
+
 + 水分儲存
+你的身體已經學會了在平靜地行走和集中慢跑時有效地保持水分平衡。 這減少了兩種運動模式下的水分損失，使您即使在高活動條件下也能保持更長時間的水分並避免脫水。
+
 + 口渴抵抗
+你已經學會了對抗口渴，減少脫水。 現在，當體內水位較低時，您的健康花費更慢。
+
 + 飢餓抵抗
+你的身體習慣于缺乏食物，並且更加節約地消耗能量。 現在，當你的飽腹感水平較低時，你的健康狀況下降得更慢。
+
 + 掠食性消化
+身體每個級別的卡路裏和水的消耗都減少了
+
 
 ## ![image](/Wiki/images/medicine.png) MEDICINE 醫學
 >醫學技能能讓你更有效地治療不同程度的疾病。通過為自己或其他倖存者提供直接的醫療幫助來提高技能。
 
 ### 天賦
 + 刺傷手術
+你增加了用手術包成功縫合穿刺傷的機會。
+
 + 戶外傷口手術
+你增加了用手術包成功從體內取出子彈的機會。
+
 + 內臟手術
+如果內臟器官受損，手術成功的機會就會增加，由於你對解剖學的深入了解核對重要結構的精細工作，你可以更有效的應對最危險的內傷。
+
 + 清潔與無菌
+你減少了傷口感染的機會，仔細遵守衛生規則和使用無菌儀器可以使你在手術過程中最大限度的減少感染風險。
+
 + 改良藥物
+所有藥物的使用壽命更長，給你更多的時間來恢復和癒合。
+
 + 繃帶大師
+你靈巧的雙手能夠快速有效的止血，傷口敷料需要更少的時間，這增加了你在危急情況下生存的機會。
+
 + 外科醫生
+你精確而有自信的動作使你能夠以最快的速度執行操作，外科手術花費更少的時間。
+
 + 心肺復甦術
+你已經學會了如何快速的把一個人從無意識中救起，由於你的急救技能和有效復甦的方法與知識，你將迅速穩定受傷者，並在關鍵時刻使他們恢復意識。
+
 + 藥丸識別
+你在藥理方面的豐富經驗可幫助你識別片劑中的藥物，現在藥丸的描述將表明他們的正面和負面影響。
+
 + 安瓿識別
+你在藥理方面的豐富經驗可幫助你識別安瓿中的藥物，現在安瓿的描述將表明他們的正面和負面影響。
+
 + 注射器識別
+你在藥理方面的豐富經驗可幫助你識別注射器中的藥物，現在注射器的描述將表明他們的正面和負面影響。
+
++ 聽診器
+你已經學會了如何熟練地使用聽診器來準確診斷病人的病情 / 疾病 / 傷口 
+
 + 抗生素專家
+通過抗生素的水平提高並改善身體對疾病的保護來增加抗生素的有效性
+
 + 麻醉師
+你使用麻醉劑的技巧是無可挑剔的，每種止痛藥都能提供額外的止痛效果
 
 ## ![image](/Wiki/images/ATHLETICS.png) ATHLETICS 運動
 >運動技能類別提高你的耐力，影響你在移動時的耐力消耗和恢復。通過長時間跑步來訓練這項技能。
@@ -85,16 +135,38 @@
 
 ### 天賦
 + 快腿
-+ 馬拉松選手
-+ 正確呼吸
+你在短跑時花費的耐力較少。 由于出色的體能和節能，您可以保持更長時間的高速度，而不會如此快地感到疲倦。
+
++ 馬拉松運動員
+慢跑時你恢複耐力更快。 由于力量和呼吸的有效分配，你的耐力甚至在運動中恢複，讓你繼續跑更長的時間，而不必停下來休息。
+
++ 適當的呼吸
+你通過站著不動來更快地恢複耐力. 快速放松和恢複力量的能力可以讓您快速將耐力恢複到靜態位置，並隨時准備好新的行動。
+
 + 游泳高手
+你減少耐力消耗，增加遊泳時的恢複。 由于有效的劃船技術和呼吸控制，您可以節省水中的力量並更快地恢複耐力，讓您在水上停留更長時間。
+
 + 攀爬大師
+使用垂直梯子時，您可以減少耐力消耗並增加其恢複。 由于靈巧和經濟分配的努力，你花更少的精力在攀登和恢複更快，這可以讓你更有效地在高處移動。
+
 + 不喘氣
+你減少耐力恢複之前的延遲。 你的身體在體力消耗後開始恢複得更快，讓你快速恢複到完全戰備狀態並保持更長時間的活躍。
+
 + 水分控制
+您減少運行時的用水量。 由于改善了對身體水分平衡的控制，您在積極運動期間保持更長時間的水分，這可以讓您在長時間跑步時減少口渴。
+
 + 能量控制
+您在跑步時減少了食物的消耗。 有效利用能量可以讓您的身體在積極運動期間保持更長時間的飽腹感，即使在長時間跑步時也能減少對食物的需求。
+
 + 耐力
+你的身體會因為長期的負荷而變硬。 最大耐力儲備增加，讓您保持活躍更長時間而不會疲勞。
+
 + 特技演員
+你減少了你從跌倒中受到的傷害。 由于改善了協調性和摔倒時正確分組的能力，您可以降低嚴重傷害的風險，即使從高處墜落也能保持更多的健康。
+
 + 強壯骨骼
+你的骨骼變得更強壯，減少骨折的風險。 即使在危險的情況下，你也更能抵抗傷害和傷害。
+
 
 ## ![image](/Wiki/images/STRENGTH.png) STRENGTH 力量
 >力量技能類別提高你的負重能力並增強近戰攻擊力。通過定期的體能活動和使用近戰武器來訓練這項技能。
@@ -104,32 +176,76 @@
 
 ### 天賦
 + 重量級
+你的身體素質可以讓你攜帶更多的重量。 最大便攜式的重量被增加了，給您在運輸設備的一個優勢。 （技能修改器額外增加）
+
 + 跳躍高手
+你的跳躍變得更容易了。 你在跳躍時花費更少的耐力，這可以讓你在危險的情況下保持更長的力量。
+
 + 防護大師
+你有效地偏轉攻擊，在阻止攻擊上花費更少的耐力。 你的力量持續更長時間，讓你在戰鬥中保持彈性。
+
 + 閃避大師
+你的防禦技能被磨練到完美。 增加了成功阻擋強力近戰攻擊的機會，使你成為堅不可摧的對手。
+
 + 快速攻擊
+你的快速攻擊變得更加有效。 你在快速打擊時花費更少的耐力，這可以讓你在戰鬥中保持活躍更長時間。
+
 + 強力攻擊
+你的快速攻擊變得更加強大。 快速打擊的傷害增加，讓你在短時間內處理更具毀滅性的打擊。
+
 + 重擊猛攻
-+ 破壞猛攻
+你已經學會了如何正確地分配你的力量。 強拳現在需要更少的耐力，這可以讓你節省能量，即使在最激烈的戰鬥。
+
++ 破壞衝擊
+你的強拳已經變得更具破壞性。 強大攻擊的傷害增加了，讓你輕松突破對手的防禦，造成更嚴重的傷害。
+
 + 輕型護甲
+你已經學會了如何有效地穿盔甲，減少它對你身體的重量。 即使是最重的保護對你來說也感覺更輕，這可以讓你更快，更自由地移動。
+
 + 堅固之手
+你的身體被設計成攜帶笨重的物體。 你可以很容易地管理別人似乎負擔不起的東西，而不會失去流動性。
+
 + 絕殺一擊
+你的單拳是如此強大，他們可以立即擊倒僵屍或其他玩家。 一個精確的打擊和敵人已經在地面上。
+
 
 ## ![image](/Wiki/images/STEALTH.png) STEALTH 隱匿
 >隱匿技能類別讓你對感染者和其他倖存者更加隱蔽。通過悄悄移動並避免被感染者發現來訓練這項技能。
 
 ### 天賦
 + 靜步
+你的腳步變得更安靜，這有助于避免不必要的關注，並對其他幸存者更加沈默。
+
 + 冷血
+你在任何情況下都保持絕對的冷靜。 你的角色的嘴發出的聲音變得更安靜，讓你保持不太明顯的其他人。
+
 + 戰鬥小隊
+使用武器重新加載和其他操作會産生更少的噪音，使您即使在緊張的情況下也能保持隱身。
+
 + 合身裝備
+你的角色的裝備在移動時産生的噪音要小得多，這有助于你避免不必要的關注，並對其他幸存者更加沈默。
+
 + 隱形人
+留在陰影和避免大聲行動的技巧使你幾乎看不見被感染的人，讓你輕松通過危險的領土。 被發現感染的風險降低。
+
 + 貓眼
+你的眼睛像貓一樣適應黑暗。在弱光條件下，你可以看得更清楚，這讓你在黑暗中自信地導航。
+
 + 狼的朋友
+你對捕食者行為的理解可以讓你遠離他們的視野，而不是用你的氣味吸引他們。 被狼攻擊的概率降低。
+
 + 熊的朋友
+由于您的經驗和對野生動物習性的理解，熊注意到您的次數較少，並且不會表現出侵略性，給您更好的機會避免危險的遭遇。
+
 + 無聲殺手
+你的刀處理技巧是無可挑剔的. 你可以快速無聲地殺死對手，以極高的精度和最小的噪音中和對手。
+
 + 忍者
+你發出的所有噪音和聲音在晚上變得安靜了50％。
+
 + 靜音步伐
+你已經達到了隱身的最高水平。 在沒有鞋子的情況下移動時，你根本不會産生任何聲音，成為一個真正的幽靈。
+
 
 ## ![image](/Wiki/images/SURVIVAL.png) SURVIVAL 生存
 >生存技能類別提供幫助你在這個殘酷世界中生存的能力。通過擊殺感染者、製作篝火和更長時間的生存來訓練這項技能。
@@ -143,16 +259,35 @@
 
 ### 天賦
 + 火焰狂人
+你已經學會了如何快速有效地生火，在任何天氣條件下都能救你。
+
 + 抵抗寒冷
+就像你是為寒冷而生的。 您的身體更好地耐受低溫，使您在惡劣條件下具有優勢，並增加對寒冷的抵抗力。
+
 + 堅韌的腳
+你的腳已經習慣了惡劣的環境，沒有鞋子就被割傷或受傷的風險顯著降低。
+
 + 堅韌的手
+你的手感覺像是鋼做的。 沒有手套，你是不容易割傷和損壞，輕松應對任何粗糙的工作。
+
 + 祖傳技術
+你已经掌握了古老的技术，让你制作一个自制的点火装置，并帮助他们更有效地生火。
+
 + 篝火效率
+您的火災處理技能可以讓您以更少的資源維護更長時間。 篝火燃燒更長時間，使用更少的燃料。
+
 + 耐用裝備
+您的工具處理技能顯著提高，使您能夠更有效地使用它們。 您可以降低使用打火機和點火套件的資源成本。
+
 + 生存專家
 + 隱形儲藏
+你的生存技能允許你掩蓋緩存和緩存，使它們完全不可見。
+
 + 生存本能
+殭屍停止殺死你，當你失去知覺時，你的身體本能的凍結，導致殭屍對你失去興趣，讓你即使在最危險的情況下也有生存機會。
+
 + 蘑菇預感
+你的蘑菇狩獵技能已經完善，現在當你靠近蘑菇時，蘑菇會更加明顯，這使得在茂密的植被中更容易發現蘑菇。
 
 ## ![image](/Wiki/images/HUNTING.png) HUNTING 狩獵
 >狩獵技能類別讓你更有效地狩獵動物、處理它們的屍體並設置陷阱。通過狩獵和處理動物屍體來訓練這項技能。
@@ -162,26 +297,64 @@
 
 ### 天賦
 + 肉類獵人
+你從戰利品中得到更多的肉。 你的狩獵和屠宰技巧可以讓你盡可能有效地雕刻每個胴體，增加肉的産量。
+
 + 屠夫
+你減少了屠宰屍體所需要的時間. 熟練的動作和對工具使用的信心使您能夠快速從屠宰的動物中提取資源。
+
 + 刀具大師
+你減少刀的磨損時，切割胴體。 您的精確和自信的運動保持刀片鋒利的時間更長，讓您更有效地使用刀和顯著延長其使用壽命。
+
 + 陷阱專家
+你增加動物陷阱的有效性。 你的設置和僞裝陷阱的知識增加了成功捕捉遊戲的機會，為生存提供了穩定的肉類和資源來源。
+
 + 鞣皮工
+你從收獲的動物中獲得更多的皮膚，對它們的損害顯著減少。 由于您精確的加工和切割技巧，您可以保持皮膚的最佳狀態，增加其數量和質量以備將來使用。
+
 + 經驗豐富的獵人
+你增加了火器對動物的傷害。 由于您的射擊技能和對遊戲習慣的了解，您的射擊變得更加准確和致命，這可以讓您更有效地進行狩獵。
+
 + 解剖學專家
+你可以更容易地用近戰武器對動物造成致命的傷害。 你精確的打擊和對易受傷害點的了解可以讓你更快更有效地殺死獵物
+
 + 腐爛專家
+你已經學會了如何從肉中切出腐爛的區域。 您的加工技能可以讓您節省更多可食用的部分，即使肉部分變質，為生存提供更多資源。
+
 + 路徑規劃師
+你敏銳的眼睛注意到最小的細節。 野生動物的軌迹將額外突出顯示，以便于跟蹤和狩獵。
+
 
 ## ![image](/Wiki/images/FISHING.png) FISHING 釣魚
 >釣魚技能類別提高你釣魚的能力，製作釣具和設置釣魚陷阱。通過釣魚來訓練這項技能。
 
 ### 天賦
 + 壽司大師
+你的魚切割技巧可以讓你提取更多的魚片。 每條魚都為您帶來更多寶貴的烹饪資源。
+
 + 快速清理
+你的魚切割技能處于最高水平。 你清理和屠宰魚要快得多。
+
 + 技巧之手
+你小心處理釣竿和釣具,減少它們的磨損. 你的裝備持續時間更長，讓你花更多的時間釣魚而不會破損。
+
 + 網絡釣魚
+您的釣魚陷阱安裝技能有所提高。 陷阱變得更有效，增加你的機會豐富的漁獲。
+
 + 精明釣魚者
-+ 幸運的釣魚者
+咬的機會增加，這可以讓你更快，更頻繁地拉出漁獲物。
+
++ 幸運漁夫
+你的釣魚技巧可以讓你更頻繁地鈎住真正的獎杯。 捕捉大魚的機會顯著增加，使您的每個漁獲物值得贊揚。
+
 + 可靠的鉤子
+你的技能可以讓你減少釣魚時失去釣具或誘餌的機會。 你確切地知道如何處理杆和鉤子,最大限度地減少損失的風險.
+
 + 挖蠕蟲
+你的每一個挖掘都帶來了比平常更多的蠕蟲。 你的經驗和注意力讓你在一次挖掘中找到更多的蠕蟲。
+
 + 剪除腐爛
+你的魚切割技巧可以很容易地去除腐爛的區域，同時保持肉盡可能適合。 即使是損壞的漁獲物也可以保存。
+
 + 工匠
+你已经学会了如何用简易工具制作自制的钓竿和钓具. 随着每个新的perk级别，您创建的项目的质量都会提高。
+
