--- a/Wiki/中文/子彈/說明.md
+++ b/Wiki/中文/子彈/說明.md
@@ -1,4 +1,4 @@
 # Ammo
 
 ### 子彈
-+ ![子彈參數表](https://docs.google.com/spreadsheets/d/1bKuFt7uwZN1cdJlXwFskG6_M0bloWXEayzshl2hV_8c/edit#gid=1855744601)
++ **[子彈參數列表](https://docs.google.com/spreadsheets/d/1bKuFt7uwZN1cdJlXwFskG6_M0bloWXEayzshl2hV_8c/edit#gid=1855744601)**
