--- a/Wiki/中文/搖曳露營伺服器.md
+++ b/Wiki/中文/搖曳露營伺服器.md
@@ -38,7 +38,7 @@
 
 ## BloodPlague
 
-### 💀 [瘟疫之心(已停用)](瘟疫之心/說明.md)
+### 💀 [瘟疫之心 (已停用)](瘟疫之心/說明.md)
 
 **描述：**
 血疫疾病是搖曳露營DayZ伺服器中的一種新型致命疾病，與殭屍接觸高機率會被感染瘟疫，瘟疫之心是血疫疾病的源頭。
@@ -87,6 +87,15 @@ Tarkov Case是搖曳露營伺服器的私人模組，該模組添加了許多可
 
 **描述：**
 搖曳露營伺服器的私人模組，該模組擴展可用的彈藥種類，為您的遊戲增添新的維度。
+
+---
+
+## 任務
+
+### ☄️ [任務](任務/說明.md)
+
+**描述：**
+搖曳露營伺服器的任務詳細資訊。
 
 ---
 
