--- a/Wiki/中文/醫療/說明.md
+++ b/Wiki/中文/醫療/說明.md
@@ -118,6 +118,8 @@
 
 ## ![image](/Wiki/images/cut2.png) 手術縫合線
 
+> 手術縫合線在手術中使用，必須定期消毒以防止敗血症。適當的衛生和消毒對於確保順利癒合並降低致命感染的風險至關重要。
+
 | 名稱                      | 物品                             | 劑型與包裝 | 容量 | 治療內臟（強度/時間） | 治療槍傷（強度/時間） | 作用效力（強度/時間） | 
 |:-------------------------:|:--------------------------------:|:-------------------:|:------:|:-------------------------------:|:---------------------:|:--------------------------------:|
 | Medical Bowl with Instrument (Ceramic) | TerjeSurgicalTool_Ceramic      | 手術工具     | 1      | 0.05/90                         | 0.2/40                | 0.4/30                           |
